Revert "create raft package"
This reverts commit 09d4fc427e9d76b9530e95e6227bf512c12393f1.